# sfml_snake_game

./: .gitignore  CMakeLists.txt  README.md  compilation.txt
include/: Subtitles.h  collision.h  food.h  game.h  game_menu.h  images.h  informations.h  player.h  score_board.h  textures.h
src/: Subtitles.cpp  collision.cpp  food.cpp  food.h  game.cpp  game.h  game_engine.cpp  game_engine.h  game_menu.cpp  images.cpp  informations.cpp  main.cpp  player.cpp  player.h  score_board.cpp  sfml-app  textures.cpp
